--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,20 +24,27 @@
 
         <Button
             android:id="@+id/btn_capture"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:text="Camera"
+            android:layout_width="250px"
+            android:layout_height="250px"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_weight="2"
+            android:background="@drawable/ic_photo_camera_black_24dp"
             android:textAlignment="center" />
 
         <Button
             android:id="@+id/img_pick_btn"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:text="Gallery" />
+            android:layout_width="250px"
+            android:layout_height="250px"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_weight="2"
+            android:background="@drawable/ic_photo_library_black_24dp" />
+
     </LinearLayout>
 
 </LinearLayout>
